citing/cited cards overflow issue #166

--- a/app/components/CardsList/CardsList.styl
+++ b/app/components/CardsList/CardsList.styl
@@ -10,4 +10,5 @@
         padding: 0;
         max-height: 25vh;
         overflow-y: auto;
+        overflow: hidden;
         margin: 0;
